# VariantTalk

./: CMakeLists.txt  LICENSE  NASA-License.txt  README.md
event-handling/: CMakeLists.txt  event.hpp  handler.cpp  handler.hpp  main.cpp
lang-vm/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  main.cpp  program.hpp
shared/: match.hpp
state-machine/: CMakeLists.txt  components.cpp  components.hpp  config.hpp  enemy.cpp  enemy.hpp  main.cpp  math.hpp  player.cpp  player.hpp  projectiles.cpp  projectiles.hpp  resource_bundle.hpp  sfml_interop.hpp
